--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -6,9 +6,23 @@
     <title>{%block title%}{%endblock%}</title>
   </head>
   <body>
+        <!-- Display messages at the top of the page -->
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+    <hr>
     <ul>
       <li><a href="{% url 'departments:list' %}">Departments APP</a></li>
+      <li><a href="{% url 'managers:list' %}">Managers APP</a></li>
+      <li><a href="/admin">Admin panel</a></li>
     </ul>
+    <hr>
     {% block content %}{% endblock content %}
   </body>
 </html>
