--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -24,5 +24,7 @@
     </ul>
     <hr>
     {% block content %}{% endblock content %}
+    <hr>
+    <a href="javascript:window.history.back()">Go Back</a>
   </body>
 </html>
