--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -18,6 +18,7 @@
     {% endif %}
     <hr>
     <ul>
+      <li><a href="{% url 'faculties:list' %}">Faculties APP</a></li>
       <li><a href="{% url 'departments:list' %}">Departments APP</a></li>
       <li><a href="{% url 'managers:list' %}">Managers APP</a></li>
       <li><a href="/admin">Admin panel</a></li>
