Teachers CRUD app.

--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -21,6 +21,7 @@
       <li><a href="{% url 'faculties:list' %}">Faculties APP</a></li>
       <li><a href="{% url 'departments:list' %}">Departments APP</a></li>
       <li><a href="{% url 'managers:list' %}">Managers APP</a></li>
+      <li><a href="{% url 'teachers:list' %}">Teachers APP</a></li>
       <li><a href="/admin">Admin panel</a></li>
     </ul>
     <hr>
