--- a/qualification_hub/templates/base.html
+++ b/qualification_hub/templates/base.html
@@ -23,6 +23,7 @@
       <li><a href="{% url 'managers:list' %}">Managers APP</a></li>
       <li><a href="{% url 'teachers:list' %}">Teachers APP</a></li>
       <li><a href="{% url 'students:list' %}">Students APP</a></li>
+      <li><a href="{% url 'certificates:list' %}">Certificates APP</a></li>
       <li><a href="/admin">Admin panel</a></li>
     </ul>
     <hr>
