--- a/qualification_hub/templates/teachers/teacher_list.html
+++ b/qualification_hub/templates/teachers/teacher_list.html
@@ -22,6 +22,18 @@
     <p>No teachers found.</p>
 {% endif %}
 
+<h2>Teachers without Departments</h2>
+
+{% if without_departments_teachers %}
+    <ul>
+    {% for teacher in without_departments_teachers %}
+        <li>{{ teacher.full_name }} - No Department <a href="{% url 'teachers:update' teacher.pk%}">Edit</a></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>No teachers are currently without departments.</p>
+{% endif %}
+
 <!-- Link to create a new teacher -->
 <p>
     <a href="{% url 'teachers:create' %}">Add New Teacher</a>
